--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,20 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.google.code.gson:gson:2.2.4'	//Gson包
+    implementation 'com.youth.banner:banner:1.4.10'		//Banner轮播图片
+    implementation 'com.github.bumptech.glide:glide:4.8.0'	//Glide图片加载框架依赖
+    implementation 'com.android.support:design:30.0.4'    			//抽屉依赖
+    implementation 'com.google.android.material:material:1.2.0-alpha02'     	//抽屉依赖
+    implementation 'androidx.recyclerview:recyclerview:1.1.0' 	//RecyclerView依赖
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1' 	//OkHttp依赖
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'       //SmartRefreshLayout依赖
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.2'       //SmartRefreshHeader依赖
+    implementation 'pub.devrel:easypermissions:1.3.0' 	////动态权限申请
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'	//Retrofit依赖
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0' 	//Gson解析Json转换器
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0' // 必要依赖，和Rxjava结合必须用到，下面会提到
+    implementation "io.reactivex.rxjava2:rxjava:2.1.3" // 必要rxjava2依赖
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1" // 必要rxandrroid依赖，切线程时需要用到
+    implementation 'org.greenrobot:eventbus:3.1.1'        //EventBus依赖
 }
